# BookSystem

./: README.md  notes.md  pyproject.toml  run.py
docs/: db.md
frontend/: login.css  login.html
src/: database.py  dbtemplate.py  run_server.py  rwlock.py  test_server.py
src/booksystem/: __init__.py  core.py  models.py
src/booksystem/models/: __init__.py  base.py  payloads.py  tables.py
src/server/: database.py  pages.py  server.py
src/static/: index.html  script.js
src/stdlib_server/: __init__.py  database.py  server.py
static/: index.html
