[project]
name = "BookSystem"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "NingmengLemon", email = "guanchenxiang@outlook.com"},
]
dependencies = [
    "fastapi[all]>=0.115.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
